--- a/src/Pages/Landing/styles/Roadmap.css
+++ b/src/Pages/Landing/styles/Roadmap.css
@@ -2,7 +2,7 @@
   padding: 180px 20px;
   margin-top: 100px;
   align-items: flex-end;
-  background-image: url("roadmap-bg.png");
+  background-image: url("/roadmap-bg.png");
   background-size: 100% 100%;
   background-repeat: no-repeat;
 }
