--- a/src/Layout/Header/Header.css
+++ b/src/Layout/Header/Header.css
@@ -48,6 +48,7 @@ nav a {
   position: relative;
   transition: all 0.5s ease-in;
   text-decoration: none;
+  cursor: pointer;
 }
 nav .active-link {
   color: var(--orange);
