--- a/src/Layout/Footer/Footer.css
+++ b/src/Layout/Footer/Footer.css
@@ -3,7 +3,7 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  padding: 60px 20px;
+  padding: 30px 20px;
 }
 footer {
   display: flex;
@@ -14,6 +14,7 @@ footer {
 }
 footer > img {
   width: 324px;
+  height: 240px;
   object-fit: contain;
 }
 .foot-links {
@@ -69,7 +70,7 @@ footer > img {
   width: 100%;
   max-width: var(--max-width);
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
 }
 .copy-div p {
