--- a/src/Pages/Landing/styles/Trailer.css
+++ b/src/Pages/Landing/styles/Trailer.css
@@ -1,4 +1,4 @@
-.trailer-wrapp > img {
+.trailer-wrapp > video {
   width: 100%;
   object-fit: cover;
   max-height: 730px;
@@ -6,6 +6,18 @@
 .trailer-wrapp {
   position: relative;
   margin-top: 60px;
+  isolation: isolate;
+}
+.trailer-wrapp:before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  opacity: 0.6;
+  z-index: 2;
 }
 .trailer-div {
   text-align: center;
@@ -19,6 +31,7 @@
   transform: translate(-50%, -50%);
   max-width: 944px;
   color: white;
+  z-index: 3;
 }
 .trailer-div p {
   font-weight: 700;
@@ -38,7 +51,7 @@
   .trailer-div {
     padding-inline: 20px;
   }
-  .trailer-wrapp > img {
+  .trailer-wrapp > video {
     min-height: 420px;
   }
 }
