--- a/src/Components/Button/Button.css
+++ b/src/Components/Button/Button.css
@@ -9,7 +9,12 @@
   background-color: transparent;
   text-decoration: none;
   display: grid;
+  transition: all 0.5s ease-in-out;
   place-items: center;
+}
+.transparent:hover {
+  background-color: rgba(255, 255, 255, 0.3);
+  color: white;
 }
 .cta-btn {
   display: grid;
@@ -32,4 +37,9 @@
   color: white;
   font-weight: 500;
   font-size: 18px;
+  transition: all 0.5s linear;
+}
+.cta-btn:hover > div {
+  background-color: transparent;
+  color: var(--orange);
 }
