--- a/src/Layout/Header/Header.css
+++ b/src/Layout/Header/Header.css
@@ -77,6 +77,11 @@ nav a:hover {
   gap: 20px;
   width: 100%;
 }
+.sign-up-btn {
+  color: var(--orange);
+  cursor: pointer;
+  text-decoration: none;
+}
 .right-header svg {
   color: white;
   font-size: 20px;
