--- a/src/Pages/Landing/styles/Roadmap.css
+++ b/src/Pages/Landing/styles/Roadmap.css
@@ -10,7 +10,7 @@
   width: 100%;
   display: flex;
   justify-content: center;
-  align-items: flex-start;
+  align-items: center;
   flex-direction: column;
   gap: 30px;
   max-width: calc(100% - 150px);
