--- a/src/Pages/Landing/styles/Hero.css
+++ b/src/Pages/Landing/styles/Hero.css
@@ -35,6 +35,24 @@
   gap: 20px;
   margin-top: 10px;
 }
+.social-hero {
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  display: flex;
+  margin-top: 10px;
+}
+.social-hero > a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 25px;
+  color: white;
+  transition: all 0.7s ease-in-out;
+}
+.social-hero > a:hover {
+  color: var(--orange);
+}
 @media screen and (max-width: 1161px) {
   .hero-wrap {
     margin-bottom: 30px;
