--- a/src/Layout/Header/Header.css
+++ b/src/Layout/Header/Header.css
@@ -5,7 +5,7 @@
   left: 0;
   z-index: 85;
 }
-header {
+.header-wrapp header {
   display: flex;
   justify-content: space-between;
   align-items: center;
