--- a/src/Pages/Dashboard/styles/DashMain.css
+++ b/src/Pages/Dashboard/styles/DashMain.css
@@ -1,6 +1,7 @@
 .dash-main-wrapp {
   position: relative;
   padding: 120px 20px;
+  padding-bottom: 80px;
 }
 .dash-main-wrapp > img {
   left: 0;
@@ -56,6 +57,37 @@
   border: 1px solid #ffd37e;
   border-radius: 11px 11px 0px 0px;
   overflow-x: auto;
+}
+.nft-cont::-webkit-scrollbar {
+  width: 12px;
+  background-color: #110f06;
+}
+.nft-cont::-webkit-scrollbar:horizontal {
+  height: 15px;
+}
+.nft-cont::-webkit-scrollbar-track {
+  border: 1px #ffd37e solid;
+  border-radius: 0px;
+  height: 15px;
+  -webkit-box-shadow: 0 0 6px #110f06 inset;
+}
+.nft-cont::-webkit-scrollbar-thumb {
+  background-color: #110f06;
+  border: 2px solid #ffd37e;
+  border-radius: 1688px;
+}
+.nft-cont::-webkit-scrollbar-thumb:hover {
+  background-color: #110f06;
+  border: 2px solid #ffd37e;
+}
+.nft-cont::-webkit-scrollbar-thumb:active {
+  background-color: #110f06;
+  border: 1px solid #ffd37e;
+}
+.nft-cont img {
+  width: 107px;
+  height: 107px;
+  object-fit: fill;
 }
 .nft-swap-div {
   gap: 15px;
@@ -222,12 +254,25 @@
   outline: 1px solid var(--orange);
   outline-offset: 3px;
 }
+.nft-row-dash {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  gap: 30px;
+}
 @media screen and (max-width: 1200px) {
   .recent {
     width: max-content;
   }
   .nft-cont {
     max-width: 400px;
+  }
+  .nft-row-dash {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    place-items: center;
   }
 }
 @media screen and (max-width: 950px) {
@@ -269,5 +314,9 @@
     align-items: center;
     gap: 20px;
     margin-top: 0px;
+  }
+  .nft-row-dash {
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
   }
 }
