--- a/src/Pages/Dashboard/styles/DashboardHero.css
+++ b/src/Pages/Dashboard/styles/DashboardHero.css
@@ -9,7 +9,7 @@
 .dash-hero-div {
   display: flex;
   justify-content: center;
-  align-items: flex-start;
+  align-items: center;
   gap: 200px;
   padding-inline: 20px;
   width: 100%;
@@ -59,8 +59,8 @@
   align-items: center;
   flex-direction: column;
   background: #130c18;
-  width: 244.27px;
-  height: 244.27px;
+  width: 210.27px;
+  height: 210.27px;
   isolation: isolate;
   position: relative;
 }
@@ -76,7 +76,7 @@
 }
 .inner-dash h2 {
   font-weight: 700;
-  font-size: 28.5px;
+  font-size: 24.5px;
   line-height: 34px;
   text-align: center;
   width: min-content;
