--- a/src/Pages/Dashboard/styles/DashboardHero.css
+++ b/src/Pages/Dashboard/styles/DashboardHero.css
@@ -30,7 +30,8 @@
   align-items: center;
   gap: 30px;
 }
-.dash-filters button {
+.dash-filters button,
+.dash-filters a {
   width: 130px;
   border-radius: 6px;
   height: 59px;
@@ -41,8 +42,13 @@
   color: #ffffff;
   cursor: pointer;
   text-transform: uppercase;
+  text-decoration: none;
+  display: grid;
+  place-items: center;
+  transition: all 0.6s ease-in-out;
 }
-.dash-filters .active-filter-dash {
+.dash-filters button:hover,
+.dash-filters a:hover {
   background: rgba(223, 146, 0, 0.2);
   border-color: var(--orange);
   color: var(--orange);
@@ -76,7 +82,7 @@
 }
 .inner-dash h2 {
   font-weight: 700;
-  font-size: 24.5px;
+  font-size: 23.5px;
   line-height: 34px;
   text-align: center;
   width: min-content;
@@ -85,7 +91,7 @@
 }
 .inner-dash h3 {
   font-weight: 600;
-  font-size: 73px;
+  font-size: 65px;
   line-height: 1;
   color: #ff940c;
 }
