--- a/src/Pages/Dashboard/styles/DashMain.css
+++ b/src/Pages/Dashboard/styles/DashMain.css
@@ -2,6 +2,26 @@
   position: relative;
   padding: 120px 20px;
   padding-bottom: 80px;
+  isolation: isolate;
+}
+.blur-circ1,
+.blur-circ2 {
+  position: absolute;
+  width: 842px;
+  height: 842px;
+  background: #df9200;
+  opacity: 0.14;
+  filter: blur(283.5px);
+}
+.blur-circ1 {
+  top: 60%;
+  left: -20%;
+  transform: translateY(-50%);
+}
+.blur-circ2 {
+  top: 70%;
+  right: -20%;
+  transform: translateY(-50%);
 }
 .dash-main-wrapp > img {
   left: 0;
@@ -336,6 +356,9 @@
   .top-main-dash {
     flex-direction: column-reverse;
   }
+  .blur-circ1 {
+    top: 20%;
+  }
   .recent {
     max-width: 100%;
   }
@@ -347,6 +370,8 @@
   .swap-ico {
     position: static;
     transform: none;
+    left: initial;
+    right: initial;
   }
   .swap-row {
     flex-direction: column;
