--- a/src/Pages/Landing/styles/Hero.css
+++ b/src/Pages/Landing/styles/Hero.css
@@ -1,9 +1,22 @@
 .hero-wrap {
-  background-image: url("/bg2.png");
+  background-image: url("/bg2.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
   margin-bottom: 60px;
+  position: relative;
+  isolation: isolate;
+}
+.hero-wrap::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  opacity: 0.6;
+  z-index: -1;
 }
 .hero-div {
   width: 100%;
