--- a/src/Pages/Dashboard/styles/DashboardHero.css
+++ b/src/Pages/Dashboard/styles/DashboardHero.css
@@ -1,7 +1,7 @@
 .dash-hero {
   width: 100%;
   min-height: calc(100vh - 60px);
-  background-image: url("/bg1.png");
+  background-image: url("/bg2.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   padding-top: 130px;
