--- a/src/Pages/Landing/styles/Roadmap.css
+++ b/src/Pages/Landing/styles/Roadmap.css
@@ -5,6 +5,20 @@
   background-image: url("/roadmap-bg.png");
   background-size: 100% 100%;
   background-repeat: no-repeat;
+  position: relative;
+}
+.road-line {
+  position: absolute;
+  left: 0;
+  object-fit: cover;
+  height: 40px;
+  width: 100%;
+}
+.road-line1 {
+  top: 0%;
+}
+.road-line2 {
+  bottom: 0;
 }
 .roadmap-div {
   width: 100%;
@@ -148,7 +162,6 @@
   .roadmap-wrapp {
     margin-top: 50px;
     padding: 150px 20px;
-    background-image: url("/roadmap-bg-mob.png");
   }
   .roadmap-div {
     max-width: 100%;
